@@ -1,5 +1,11 @@
 2003-11-09  Keith Packard  <keithp@keithp.com>
 
+	* xcompmgr.c: (configure_win):
+	Configure damage must include shadow region, not just window.
+	Also, leaking region on each configure.
+
+2003-11-09  Keith Packard  <keithp@keithp.com>
+
 	* xcompmgr.c: (main):
 	oops.  Left in an XSynchronize call.
 
